fix theme selector dropdown styles on firefox

--- a/src/content/inject.scss
+++ b/src/content/inject.scss
@@ -122,7 +122,7 @@
               content: "\f088";
             }
           }
-          > ul {
+          > ul.text-styles-dropdown-list {
             left: auto;
             right: 0;
 
