--- a/src/content/themeSelector.scss
+++ b/src/content/themeSelector.scss
@@ -9,25 +9,36 @@
             width: 180px;
           }
           @media (max-width: 1024px) {
-            width: 150px;
+            width: 160px;
           }
-          .theme-dropdown-item {
-            .theme-preview-circle {
-              width: 2em;
-              height: 2em;
-              border-radius: 50%;
-              border: 1px solid #ccc;
-              display: inline-block;
-              margin-right: 0.7em;
-              vertical-align: middle;
+          ul {
+            left: auto;
+            width: 210px;
+            @media (max-width: 1280px) {
+              width: 180px;
+            }
+            @media (max-width: 1024px) {
+              width: 160px;
+            }
 
-              //  special handling for auto theme
-              &[data-value="auto"] {
-                background: linear-gradient(
-                  90deg,
-                  #181c25 50%,
-                  #ffffff 50%
-                ) !important;
+            .theme-dropdown-item {
+              .theme-preview-circle {
+                width: 2em;
+                height: 2em;
+                border-radius: 50%;
+                border: 1px solid #ccc;
+                display: inline-block;
+                margin-right: 0.7em;
+                vertical-align: middle;
+
+                //  special handling for auto theme
+                &[data-value="auto"] {
+                  background: linear-gradient(
+                    90deg,
+                    #181c25 50%,
+                    #ffffff 50%
+                  ) !important;
+                }
               }
             }
           }
